--- a/apps/mini-app/tsconfig.json
+++ b/apps/mini-app/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "bot/tsconfig.json"
+    "apps/bot/tsconfig.json"
   ],
   "exclude": ["node_modules"]
 }
