--- a/apps/mini-app/package.json
+++ b/apps/mini-app/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tma.js/sdk": "^1.5.3",
     "@tma.js/sdk-react": "^2.0.3",
+    "@worldcoin/idkit": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "next": "14.2.3",
