--- a/apps/mini-app/package.json
+++ b/apps/mini-app/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@betoken/database": "*",
+    "@coinbase/cbpay-js": "^2.4.0",
+    "@coinbase/coinbase-sdk": "^0.10.0",
+    "@coinbase/onchainkit": "^0.35.5",
     "@phosphor-icons/react": "^2.1.7",
     "@privy-io/react-auth": "^1.94.2",
     "@radix-ui/react-icons": "^1.3.0",
