feat: add gnosis circles to account settings

--- a/apps/mini-app/.env.example
+++ b/apps/mini-app/.env.example
@@ -2,3 +2,4 @@ NEXT_PUBLIC_PRIVY_APP_ID=YOUR_APP_ID
 DATABASE_URL="postgresql://myapplicationuser:mypass@myhost:1234/applicationdb"
 NEXT_PUBLIC_ONCHAINKIT_API_KEY=YOUR_PUBLIC_API_KEY
 NEXT_PUBLIC_CDP_PROJECT_ID=YOUR_CDP_PROJECT_ID
+CIRCLES_CONTRACT_RUNNER_PK=YOUR_PRIVATE_KEY
