--- a/apps/mini-app/package.json
+++ b/apps/mini-app/package.json
@@ -16,26 +16,37 @@
     "@coinbase/cbpay-js": "^2.4.0",
     "@coinbase/coinbase-sdk": "^0.10.0",
     "@coinbase/onchainkit": "^0.35.5",
+    "@hookform/resolvers": "^3.9.1",
     "@phosphor-icons/react": "^2.1.7",
     "@privy-io/react-auth": "^1.94.2",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.60.5",
     "@tma.js/sdk": "^1.5.3",
     "@tma.js/sdk-react": "2.0.3",
     "@worldcoin/idkit": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "ethers": "^6.13.4",
     "next": "14.2.3",
     "next-themes": "^0.4.3",
     "react": "^18",
+    "react-day-picker": "^9.3.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.45",
-    "wagmi": "^2.12.33"
+    "wagmi": "^2.12.33",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20",
