--- a/apps/mini-app/package.json
+++ b/apps/mini-app/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@phosphor-icons/react": "^2.1.7",
     "@privy-io/react-auth": "^1.94.2",
+    "@privy-io/server-auth": "^1.16.3",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
